Fix java warning